[gd_scene load_steps=33 format=3 uid="uid://b17jmhvmppjoi"]

[ext_resource type="Script" path="res://scenes/enemies/bird_enemy.gd" id="1_b354n"]
[ext_resource type="Texture2D" uid="uid://c8jowfbnv54vu" path="res://Assets/TwilightFlyingEye/Attack1.png" id="2_nn0el"]
[ext_resource type="Texture2D" uid="uid://bx24wx65plli3" path="res://Assets/TwilightFlyingEye/Death.png" id="3_wr217"]
[ext_resource type="Texture2D" uid="uid://bhwmu3excogpy" path="res://Assets/TwilightFlyingEye/Take Hit.png" id="4_igwct"]
[ext_resource type="Texture2D" uid="uid://di6s5comyrw87" path="res://Assets/TwilightFlyingEye/Flight.png" id="5_ia5g3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e5iis"]
radius = 114.039

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f6ika"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yvo8a"]
atlas = ExtResource("2_nn0el")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcvli"]
atlas = ExtResource("2_nn0el")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_25th2"]
atlas = ExtResource("2_nn0el")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6trdj"]
atlas = ExtResource("2_nn0el")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccd8e"]
atlas = ExtResource("2_nn0el")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8c36"]
atlas = ExtResource("2_nn0el")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyxci"]
atlas = ExtResource("2_nn0el")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfsyg"]
atlas = ExtResource("2_nn0el")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nhka"]
atlas = ExtResource("3_wr217")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hth5v"]
atlas = ExtResource("3_wr217")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgpul"]
atlas = ExtResource("3_wr217")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_swgy2"]
atlas = ExtResource("3_wr217")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4otvb"]
atlas = ExtResource("4_igwct")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ow5sd"]
atlas = ExtResource("4_igwct")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtwun"]
atlas = ExtResource("4_igwct")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_rw2k7"]
atlas = ExtResource("4_igwct")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdpa0"]
atlas = ExtResource("5_ia5g3")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxrrc"]
atlas = ExtResource("5_ia5g3")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_me4gi"]
atlas = ExtResource("5_ia5g3")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqxju"]
atlas = ExtResource("5_ia5g3")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_filw6"]
atlas = ExtResource("5_ia5g3")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6gs7"]
atlas = ExtResource("5_ia5g3")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi3r3"]
atlas = ExtResource("5_ia5g3")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5fxr"]
atlas = ExtResource("5_ia5g3")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_dnsdb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvo8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcvli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25th2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6trdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccd8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8c36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyxci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfsyg")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nhka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hth5v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgpul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swgy2")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4otvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ow5sd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtwun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rw2k7")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdpa0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxrrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_me4gi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqxju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_filw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6gs7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi3r3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5fxr")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}]

[node name="BirdEnemy" type="CharacterBody2D"]
z_index = 3
scale = Vector2(0.5, 0.5)
collision_layer = 4
script = ExtResource("1_b354n")

[node name="PathTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_e5iis")

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_f6ika")
disabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_dnsdb")
animation = &"idle"
autoplay = "idle"
speed_scale = 1.6

[node name="DeathTimer" type="Timer" parent="."]

[connection signal="timeout" from="PathTimer" to="." method="_on_path_timer_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_shape_exited" from="AttackArea" to="." method="_on_attack_area_body_shape_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
